# lf

./: .gitmodules  Dockerfile.freertos  Dockerfile.k22f  Dockerfile.nxp  README.md
k22f-support/: .gitignore  README.md
k22f-support/SDK_2_12_0_FRDM-K22F/: FRDM-K22F_manifest_v3_10.xml  SW-Content-Register.txt
k22f-support/SDK_2_12_0_FRDM-K22F/components/button/: component_button_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/ft6x06/: driver_ft6x06_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/fxos8700cq/: driver_fxos8700cq_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/gpio/: component_gpio_adapter_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/ili9341/: driver_ili9341_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/led/: component_led_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/lists/: component_lists_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/log/: component_log_MK22F51212.cmake  component_log_backend_debugconsole_MK22F51212.cmake  component_log_backend_ringbuffer_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/osa/: component_osa_MK22F51212.cmake  component_osa_bm_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/panic/: component_panic_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/pwm/: component_pwm_ftm_adapter_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/serial_manager/: component_serial_manager_MK22F51212.cmake  component_serial_manager_uart_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/timer/: component_pit_adapter_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/timer_manager/: component_timer_manager_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/components/uart/: component_uart_adapter_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/devices/MK22F51212/: device_MK22F51212_CMSIS_MK22F51212.cmake  device_MK22F51212_startup_MK22F51212.cmake  device_MK22F51212_system_MK22F51212.cmake
k22f-support/SDK_2_12_0_FRDM-K22F/docs/MCUXpresso SDK API Reference Manual_MK22F51212/: dir_022efbb38080960e709ea254879fde5f.html  dir_07b86ffc266b39efa5bbdc0e9fdb330a.html  dir_09f9dadd705c180f0f6fcba2157ed2a9.html  dir_0c267f045edb9b0ef64e9a860fd099c4.html  dir_13e7b449b29780a4af8c8692d20059c8.html  dir_27520577c3d33edf81ffa63786490c32.html  dir_3426deb2dd7b86c400852d77edf21315.html  dir_416fc20155a03b7bbc5728a57d236b9f.html  dir_48dd3c62d7c86167056c35ed6b546d27.html  dir_4eaab06f456111991ff05c9b9cb737cb.html  dir_50c0f6d3977876a8fb6acc75ece63018.html  dir_58e102d2449f7b3d87d5edc08313c5d7.html  dir_5c96277754ed418959ea3b47c456d5c0.html  dir_61bc899aee3999e613a40efe387422e4.html  dir_83c4f67939b2e50b6dc50fe3fc259b2d.html  dir_848ba48fec923bc3c0bf8c7926036968.html  dir_9108bfa6c83c7c513e3e0128411a10b0.html  dir_ac7a2beb2464fcf2f50409acf0bc6e08.html  dir_b07b1803b08e3bfa8752acf7d436415b.html  dir_b1c4d21f93a7826ef4aed70b30552b97.html  dir_b33ed5b80b075b6e24b0f1f0112a8b04.html  dir_b38072318156de4984ac57667f7c931f.html  dir_b5759f6cd324301c8d375e44421eccc5.html  dir_b60bc431cd2d2a4b7e645c1f73116460.html  dir_b788973f4ee043dc132897d15bbb49be.html  dir_bda58036682f346ab3d015dd2d42b321.html  dir_bebc14e255be79244de9e03d794361f1.html  (+24 more)
k22f-support/platform/: lf_k22f_support.c  lf_k22f_support.h  platform.h  reactor.c  reactor_common.c
k22f-support/src/button/: button.lf  clock_config.c  pin_mux.h
k22f-support/src/hello_world/: hello_world.lf
k22f-support/src/led_blinky/: clock_config.c  led_blinky.lf  pin_mux.h
k22f-support/src/led_blinky/armgcc/: CMakeLists.txt  build_nxp_unix.sh  gdb-debug.txt
k22f-support/test-data/: PingPong10000-120MHz.txt  PingPong10000-80MHz.txt  PingPong100000-120MHz.txt  PingPong100000-80MHz.txt
(+290 files in other folders)
